force-app/main/default/objects/Account/fields/Board_Link__c.field-meta.xml
<CustomField>
    <fullName>Board_Link__c</fullName>
    <label>Monday Board Link</label>
    <type>Url</type>
</CustomField>