force-app/main/default/objects/Account/fields/Google_Drive_Link__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_Link__c</fullName>
    <label>Google Drive Link</label>
    <type>Url</type>
</CustomField>