force-app/main/default/objects/Account/fields/Google_Drive_Link_Formula__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_Link_Formula__c</fullName>
    <formula>Google_Drive_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Google Drive Link</label>
    <type>Text</type>
</CustomField>