force-app/main/default/objects/Account/fields/Monday_Board_Link__c.field-meta.xml
<CustomField>
    <fullName>Monday_Board_Link__c</fullName>
    <formula>Board_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monday Board Link</label>
    <type>Text</type>
</CustomField>