force-app/main/default/objects/Account/fields/Sub_Client__c.field-meta.xml
<CustomField>
    <fullName>Sub_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub-Client</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Sub-Client</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Sub-Client)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>